--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-get-location": "^2.1.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
+    "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
     "styled-components": "^5.3.3"
