--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.13",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
@@ -18,6 +19,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "^0.64.3",
+    "react-native-dotenv": "^3.3.0",
     "react-native-get-location": "^2.1.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
